--- a/qdrant-landing/themes/qdrant/static/css/colors.css
+++ b/qdrant-landing/themes/qdrant/static/css/colors.css
@@ -4,6 +4,7 @@
   --brand-primary: #DC244C;
   --brand-secondary: #24386C;
   --brand-gray: #7589BE;
+  --brand-mid-gray: #B2BFE8;
   --brand-light-grey: #EBF1FF;
 
 }
