--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -55,6 +55,7 @@
 @import "blocks/copy-btn";
 @import "blocks/hero-code";
 @import "blocks/features-section";
+@import "blocks/business-section-two";
 @import "blocks/widget-header";
 @import "blocks/post-preview";
 @import "blocks/steps-form";
@@ -2922,214 +2923,6 @@ img{
 }
 
 /***
-
-====================================================================
-	Business Section Two
-====================================================================
-
-***/
-
-.business-section-two{
-	position:relative;
-	padding:30px 0 70px;
-}
-
-.business-section-two .sec-title{
-	margin-bottom:80px;
-}
-
-.business-section-two .pattern-layer{
-	position:absolute;
-	right:0;
-	top:-180px;
-	width:402px;
-	height:566px;
-	background-repeat:no-repeat;
-}
-
-.business-section-two .pattern-layer-two{
-	position:absolute;
-	right:0;
-	top:0;
-	width:1850px;
-	height:897px;
-	background-repeat:no-repeat;
-}
-
-.business-section-two .inner-container{
-	position:relative;
-}
-
-.business-section-two .business-tabs{
-	position:relative;	
-}
-
-.business-section-two .business-tabs .tab-btns{
-	position:relative;
-	text-align:center;
-	margin-bottom:40px;
-}
-
-.business-section-two .business-tabs .tab-btns .tab-btn{
-	position:relative;
-	font-size:16px;
-	background:none;
-	color:#5a5a5a;
-	width:30%;
-	font-weight:400;
-	line-height:24px;
-	cursor:pointer;
-	text-align:center;
-	margin:0 15px;
-	line-height:1.7em;
-	border-radius:8px;
-	margin-bottom:20px;
-	display:inline-block;
-	padding:0 30px 35px;
-	text-transform:capitalize;
-	/* transition:all 500ms ease; */
-	background-color:#ffffff;
-	font-family: $font-family-non-content;
-	box-shadow:0 0 20px rgba(0,0,0,0.15);
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
-}
-
-.business-section-two .business-tabs .tab-btns .tab-btn h5{
-	position:relative;
-	top:-13px;
-	color:#fff;
-	font-size:18px;
-	font-weight:700;
-	margin-top:-14px;
-	padding:14px 64px;
-	border-radius:5px;
-	display:inline-block;
-	background-color:var(--brand-secondary);
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
-}
-
-.business-section-two .business-tabs .tab-btns .tab-btn.active-btn h5,
-.business-section-two .business-tabs .tab-btns .tab-btn:hover h5{
-	background-color:var(--brand-primary);
-	color:#ffffff;
-}
-
-.business-section-two .business-tabs .tab-btns .tab-btn .icon{
-	position:relative;
-	display:block;
-	color:var(--brand-primary);
-	line-height:1em;
-	font-size:60px;
-	margin-bottom:20px;
-	font-weight:400;
-	margin-top:12px;
-}
-
-.business-section-two .business-tabs .tab-btns .tab-btn:hover,
-.business-section-two .business-tabs .tab-btns .tab-btn.active-btn{
-	
-}
-
-.business-section-two .business-tabs .tabs-content{
-	position:relative;	
-}
-
-.business-section-two .business-tabs .tabs-content .tab{
-	position:relative;
-	display:none;
-    transform: rotateY(90deg);
-	/* -webkit-transition:all 900ms ease; */
-	/* -moz-transition:all 900ms ease; */
-	/* -ms-transition:all 900ms ease; */
-	/* -o-transition:all 900ms ease; */
-	/* transition:all 900ms ease; */
-}
-
-.business-section-two .business-tabs .tabs-content .tab.active-tab{
-	display:block;
-	transform: rotateY(0deg);
-}
-
-.business-section-two .business-tabs .tabs-content .content{
-	position:relative;
-	max-width:1030px;
-	margin:0 auto;
-}
-
-.business-section-two .business-tabs .content .content-column{
-	position:relative;
-}
-
-.business-section-two .business-tabs .content .content-column .inner-column{
-	position:relative;
-}
-
-.business-section-two .business-tabs .content .content-column p{
-	position:relative;
-	color:#5a5a5a;
-	font-size:16px;
-	line-height:1.8em;
-	margin-bottom:25px;
-}
-
-.business-section-two .business-tabs .content .content-column .business-list{
-	position:relative;
-	margin-bottom:35px;
-}
-
-.business-section-two .business-tabs .content .content-column .business-list li{
-	position:relative;
-	color:#2b2a41;
-	font-size:14px;
-	font-weight:600;
-	min-height:50px;
-	margin-bottom:18px;
-	padding-left:70px;
-}
-
-/* .business-section-two .business-tabs .content .content-column .business-list li:before,
-.features-section .feature-block .text li:before{
-	position:absolute;
-	content:'\f107';
-	left:0;
-	top:0;
-	width:50px;
-	height:50px;
-	color:var(--brand-primary);
-	font-size:20px;
-	line-height:50px;
-	text-align:center;
-	border-radius:50px;
-	background-color:#ffffff;
-	font-family: "Flaticon";
-} */
-
-.business-section-two .business-tabs .content .content-column .business-list li:last-child{
-	margin-bottom:0;
-}
-
-.business-section-two .business-tabs .content .theme-btn{
-	border-radius:50px;
-}
-
-.business-section-two .business-tabs .content .image-column{
-	position:relative;
-	float:left;
-}
-
-.business-section-two .business-tabs .content .image-column .inner-column{
-	
-}
-
-/*** 
 
 ====================================================================
 	Services Section Two
