--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/single.html
@@ -1,13 +1,15 @@
 {{ define "main" }}
 
 
-<div class="auto-container pt-3 pt-md-5 single-page">
-    <div class="row clearfix">
-        <section class="content-side col-lg-12 col-md-12 col-sm-12">
-            {{ partial "benchmark_chart" . }}
-        </section>
+{{ if .Params.data }}
+    <div class="auto-container pt-3 pt-md-5 single-page">
+        <div class="row clearfix">
+            <section class="content-side col-lg-12 col-md-12 col-sm-12">
+                {{ partial "benchmark_chart" . }}
+            </section>
+        </div>
     </div>
-</div>
+{{ end }}
 
 
 
