small typography changes

--- a/qdrant-landing/themes/qdrant/static/css/article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/article.scss
@@ -43,7 +43,7 @@ article aside[role="status"]:before {
   font-weight: 900;
 }
 
-article:first-of-type {
+article:first-of-type:not(.article) {
 
   table {
     @extend .table;
@@ -103,7 +103,6 @@ article:first-of-type {
 
   p {
     margin-bottom: 0.7rem;
-    line-height: 1.8em;
   }
 
   figure {
@@ -115,6 +114,8 @@ article:first-of-type {
 .blog {
   font-family: charter, Georgia, Cambria, "Times New Roman", Times, serif;
   font-size: 20px;
+  letter-spacing: -0.003em;
+  line-height: 32px;
 
   table {
     color: rgb(41, 41, 41);
@@ -124,6 +125,7 @@ article:first-of-type {
     }
   }
 
+  p,
   ul,
   ol {
     margin-top: 0.86em;
@@ -201,11 +203,6 @@ article:first-of-type {
   @include media-breakpoint-up(md) {
     padding-top: 38px;
   }
-
-  p {
-    margin-top: 0.86em;
-    margin-bottom: 1.5em;
-  }
 }
 
 .blog {
@@ -225,9 +222,6 @@ article:first-of-type {
   }
 
   p {
-    margin-top: 0.86em;
-    margin-bottom: 1.5em;
-
     &:first-child {
       margin-top: 0;
     }
