exclude demo from sitemap

--- a/qdrant-landing/themes/qdrant/layouts/demo/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/demo/list.html
@@ -13,7 +13,7 @@
                     <!-- Sec Title -->
                     <div class="sec-title">
                         <h2>{{ $p.Title }}</h2>
-                        <div class="text">{{ $p.Description }}</div>
+                        <div class="text"><p>{{ $p.Description }}</p></div>
                     </div>
                     <a class="theme-btn btn-style-four" href="{{ $p.Params.link }}" target="_blank"><span class="txt">Live Demo</span></a>
                 </div>
