replace p with span for navigation

--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -20,6 +20,6 @@
         {{ end }}
         
         <br/>
-        <p style="padding: .375rem .75rem;">Docs version: {{ .Site.Params.docVersion }}</p>
+        <span style="padding: .375rem .75rem;">Docs version: {{ .Site.Params.docVersion }}</snap>
     </div>
 </nav>
