--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
@@ -3,16 +3,6 @@
 {{ range $i,$p := where .Data.Pages "Section" "benchmarks" }}
 
 
-{{ if .Params.data }}
-    <div class="auto-container pt-3 pt-md-5 single-page">
-        <div class="row clearfix">
-            <section class="content-side col-lg-12 col-md-12 col-sm-12">
-                {{ partial "benchmark_chart" . }}
-            </section>
-        </div>
-    </div>
-{{ end }}
-
 
 
 <div class="auto-container pt-3 pt-md-5 single-page">
@@ -20,7 +10,47 @@
         <!-- Content Side -->
         <section class="content-side col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            {{ partial "blogpost" . }}
+            {{ $link := .Permalink }}
+            {{ if .Params.external_link }}
+            {{ $link = .Params.external_link }}
+            {{ end }}
+
+            <div class="news-block-two blog-detail">
+
+
+                <div class="inner-box">
+                    
+                    {{ if .Description }}
+                        <article class="article">
+                            <h1>{{ .Title }}</h1>
+                            <p>{{ .Description }}</p>
+                        </article>
+                    {{ end }}
+
+
+                    
+
+                    {{ if .Params.data }}
+                    <div class="auto-container pt-3 pt-md-5 single-page">
+                            <div class="row clearfix">
+                                <section class="content-side col-lg-12 col-md-12 col-sm-12">
+                                    {{ partial "benchmark_chart" . }}
+                                </section>
+                            </div>
+                        </div>
+                    {{ end }}
+
+
+                    
+
+                    
+                    <div class="lower-box pt-0">
+                        <article class="article">
+                            {{ .Content }}
+                        </article>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
