New page for benchmarks with example plots (#70)
* new page for benchmarks with example plots

* wip: cahrt

* add precision selector

* upd

* stats file

* select data for the table

* added a benchmark table

* upd table visualization

* upd bench graph

* benchmarks list layout

* upd benchmark layout + add text

* upd

* upd wording

* typo

* Benchmarks page single page layout (#74)

* all benchmarks in one page

* add faq page

* move how-to-contribute in faq section

* upds

Co-authored-by: Andrey Vasnetsov <andrey@vasnetsov.com>

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -25,7 +25,6 @@
         <meta name="theme-color" content="#ffffff">
 
 
-
         {{ partial "css" . }}
         
         {{ hugo.Generator }}
@@ -63,6 +62,11 @@
         <!-- Required because netlify sends a registration link that redirects to the home page -->
         <!-- but commented because slows down a site and used extremely rarely -->
         <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
+
+        {{ if eq .Section "benchmarks" }}
+          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+          <script src="{{ "js/benchmarks.js" | absURL }}"></script>
+        {{ end }}
     </head>
 
     <body>
