search input-button

--- a/qdrant-landing/themes/qdrant/static/css/blocks/search.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/search.scss
@@ -1,3 +1,22 @@
+.search-input-btn {
+  display: block;
+  width: 90%;
+  margin-bottom: 6px;
+  margin-right: 8px;
+  margin-left: 8px;
+  padding: 8px 10px;
+  text-align: left;
+  border: 1px solid #888c8e;
+  border-radius: 4px;
+  background: none;
+  color: #6d7376;
+
+  &:hover {
+    box-shadow: 0 0 1px 0 var(--brand-secondary);
+    color: var(--brand-secondary);
+  }
+}
+
 .search {
   &__header {
     padding-right: 0;
