--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,5 +1,11 @@
 {{$currentNode := .}}
 <nav class="col-lg-3 col-md-3 col-12 mt-4 position-relative">
+    <!-- Button trigger modal -->
+    <button type="button" class="search-input-btn" data-toggle="modal" data-target="#staticBackdrop">
+        <i class="fa fa-search mr-3"></i> Search...
+    </button>
+    {{ partial "search" . }}
+
     <div id="accordion" class="sticky-top">
         {{ range where .Site.RegularPages "Section" .Section }}
 
