script for search request and generating results view

--- a/qdrant-landing/themes/qdrant/layouts/partials/search.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/search.html
@@ -20,27 +20,7 @@
                 </button>
             </div>
 
-            <div class="modal-body search__results">
-                <a class="media search-result" href="#">
-                    <span class="align-self-center search-result__icon">
-                        <i class="fas fa-file-alt"></i>
-                    </span>
-                    <div class="media-body">
-                        <h5 class="mt-0">Center-aligned media</h5>
-                        <p>Hobble oppressively like a cold rum.</p>
-                    </div>
-                </a>
-
-                <a class="media search-result" href="#">
-                    <span class="align-self-center search-result__icon">
-                        <i class="fas fa-file-alt"></i>
-                    </span>
-                    <div class="media-body">
-                        <h5 class="mt-0">Center-aligned media</h5>
-                        <p>Hobble oppressively like a cold rum.</p>
-                    </div>
-                </a>
-            </div>
+            <div class="modal-body search__results"></div>
 
             <div class="modal-footer search__footer">
                 Powered by
